Fix Opera 12 flyout collapsing to early
This is a possible fix for a problem in Opera 12 (and possibly other
browsers) caused by the active hover reagion limited to max-height: 2.2em.

This second attempt is a bit different from the first (avoids px margins
and uses line-height instead) and tested in Chrome, Firefox and Opera.
The main purpose of this patch ist to let you know it's fairly easy to
avoid this problem.

I'm open for discussions.

Feel free to take this patch and submit additional patch sets on top
of mine.

--- a/resources/compactPersonalBar/compactPersonalBar.less
+++ b/resources/compactPersonalBar/compactPersonalBar.less
@@ -23,8 +23,8 @@
 	}
 
 	#pt-flyout {
-		// prevent bar elements from jumping when flyout expanded
-		max-height: 2.2em;
+		line-height: 1.125em;
+		margin-top: .3em;
 
 		// Set correct alignment in Firefox in RTL wikis.
 		// This shouldn't be needed, but Firefox has a bug with this.
@@ -114,9 +114,10 @@
 }
 
 #p-personal > div > ul > li {
-	vertical-align: middle;
+	vertical-align: top;
 	display: inline-block;
 	float: none;
+	line-height: 32px; /* same as the images, important for ULS */
 }
 
 #pt-watchlist a, #pt-mytalk a {
